2003-03-03  Alexandre Oliva  <aoliva@redhat.com>

	* ldmain.c (set_scripts_dir): Look for relative to TOOLBINDIR as
	well.

	* ldfile.h (struct search_dirs): Added sysrooted field.
	* ldlang.h (struct lang_input_statement_struct): Likewise.
	* ldfile.c (ldfile_add_library_path): Mark sysrooted paths.
	(ldfile_open_file_search): Look for sysrooted filename starting
	with / in ld_sysroot instead of in the current directory.  Clear
	sysrooted flag if it's found in the current directory.  Set it
	from the search directory's sysrooted flag where it is found
	otherwise.
	* ldlang.c (ldlang_sysrooted_script): New static variable.
	(new_afile): Mark search_file_enums as sysrooted if
	ldlang_sysrooted_script.
	(load_symbols): Set ldlang_sysrooted_script according to the
	script's sysrooted field while processing it.
	* ld.texinfo: Document INPUT behavior in sysroot.

2003-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* scripttempl/pe.sc: Use PROVIDE with etext, end, _end,

2003-03-03  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf64alpha.sh (EXTRA_EM_FILE): Define.
	(PARSE_AND_LIST_PROLOGUE, PARSE_AND_LIST_LONGOPTS,
	PARSE_AND_LIST_OPTIONS, PARSE_AND_LIST_ARGS_CASES,
	PARSE_AND_LIST_EPILOGUE): Don't define.
	* emultempl/alphaelf.em: New file.

2003-03-01  Alan Modra  <amodra@bigpond.net.au>

	* ldemul.c: Include getopt.h.
	* emultempl/elf32.em: Include getopt.h earlier.
	* emultempl/ticoff.em: Likewise.

2003-02-28  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/elf32.em (gld${EMULATION_NAME}_get_script): Add combreloc
	support when scripts read from files.

2003-02-28  Alan Modra  <amodra@bigpond.net.au>

	* ldemul.c (ldemul_parse_args): Return FALSE by default.
	* ldemul.h (struct ld_emulation_xfer_struct): Update parse_args
	comment.

	* ldemul.c (ldemul_add_options, ldemul_handle_option): New functions.
	(ldemul_parse_args): Return bfd_boolean.  Formatting.
	* ldemul.h (ldemul_add_options, ldemul_handle_option): Declare.